add draft on swagger
